--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ cache:
     - $HOME/.sbt
 script:
   - sbt ++$TRAVIS_SCALA_VERSION test
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
