--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ cache:
     - $HOME/.sbt
 script:
   - sbt ++$TRAVIS_SCALA_VERSION validate
+  - if [[ $TRAVIS_SCALA_VERSION == 2.12* ]]; then sbt ++$TRAVIS_SCALA_VERSION validateDocs; fi
 after_success:
   - bash <(curl -s https://codecov.io/bash)
