Add support for Scala 2.13

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: scala
 scala:
   - 2.11.12
   - 2.12.8
+  - 2.13.0
 jdk:
-  - oraclejdk8
+  - openjdk11
 cache:
   directories:
     - $HOME/.ivy2/cache
