Revert "use github matrix for CI"

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,10 @@ name: ci
 on:
   push:
     branches: ['*']
+  pull_request:
+    branches: ['*']
 jobs:
   validate:
-    strategy:
-      matrix:
-        scala: [2.13.3, 2.12.10]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -14,6 +13,5 @@ jobs:
         fetch-depth: 0
     - uses: olafurpg/setup-scala@v10
     - uses: coursier/cache-action@v5
-    - run: sbt ++${{ matrix.scala }} validate
-    - if: matrix.scala == '2.13.3'
-      run: sbt "++${{ matrix.scala }} docs/run"
+    - run: sbt validate
+    - uses: codecov/codecov-action@v1
