--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -5,6 +5,10 @@ updates.pin = [{
   artifactId="cats-effect",
   version = "2."
 }, {
+  groupId = "org.typelevel",
+  artifactId="cats-effect-laws",
+  version = "2."
+}, {
   groupId = "co.fs2",
   artifactId="fs2-core",
   version = "2."
