--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,7 +1,33 @@
-version = "2.2.1"
-style = default
-maxColumn = 100
-project.git = true
-continuationIndent.defnSite = 2
+version = 3.4.3
 
-rewrite.rules = [RedundantBraces]
+style = default
+
+maxColumn = 100
+
+// Vertical alignment is pretty, but leads to bigger diffs
+align.preset = none
+
+danglingParentheses.preset = true
+
+rewrite.rules = [
+  AvoidInfix
+  RedundantBraces
+  RedundantParens
+  PreferCurlyFors
+  SortModifiers
+]
+
+rewrite.sortModifiers.order = [
+  override, implicit, private, protected, final, sealed, abstract, lazy
+]
+
+runner.dialect = scala212
+
+fileOverride {
+  "glob:**/scala-3/**/*.scala" {
+    runner.dialect = scala3
+  }
+  "glob:**/scala-2.13/**/*.scala" {
+    runner.dialect = scala213
+  }
+}
