--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ on:
     branches: [series/*]
   push:
     branches: [series/*]
-    tags: [v*, v*]
+    tags: [v*]
 
 env:
   PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
@@ -29,13 +29,8 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [2.12.15, 2.13.8, 3.1.2]
-        java: [temurin@8, temurin@17]
+        java: [temurin@8]
         project: [rootJVM]
-        exclude:
-          - scala: 2.12.15
-            java: temurin@17
-          - scala: 3.1.2
-            java: temurin@17
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
@@ -58,22 +53,6 @@ jobs:
           distribution: jdkfile
           java-version: 8
           jdkFile: ${{ steps.download-java-temurin-8.outputs.jdkFile }}
-
-      - name: Download Java (temurin@17)
-        id: download-java-temurin-17
-        if: matrix.java == 'temurin@17'
-        uses: typelevel/download-java@v1
-        with:
-          distribution: temurin
-          java-version: 17
-
-      - name: Setup Java (temurin@17)
-        if: matrix.java == 'temurin@17'
-        uses: actions/setup-java@v2
-        with:
-          distribution: jdkfile
-          java-version: 17
-          jdkFile: ${{ steps.download-java-temurin-17.outputs.jdkFile }}
 
       - name: Cache sbt
         uses: actions/cache@v2
@@ -98,7 +77,7 @@ jobs:
   publish:
     name: Publish Artifacts
     needs: [build]
-    if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v'))
+    if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
     strategy:
       matrix:
         os: [ubuntu-latest]
@@ -127,22 +106,6 @@ jobs:
           java-version: 8
           jdkFile: ${{ steps.download-java-temurin-8.outputs.jdkFile }}
 
-      - name: Download Java (temurin@17)
-        id: download-java-temurin-17
-        if: matrix.java == 'temurin@17'
-        uses: typelevel/download-java@v1
-        with:
-          distribution: temurin
-          java-version: 17
-
-      - name: Setup Java (temurin@17)
-        if: matrix.java == 'temurin@17'
-        uses: actions/setup-java@v2
-        with:
-          distribution: jdkfile
-          java-version: 17
-          jdkFile: ${{ steps.download-java-temurin-17.outputs.jdkFile }}
-
       - name: Cache sbt
         uses: actions/cache@v2
         with:
@@ -166,13 +129,8 @@ jobs:
           echo "$PGP_PASSPHRASE" | gpg --pinentry-mode loopback --passphrase-fd 0 --import /tmp/signing-key.gpg
           (echo "$PGP_PASSPHRASE"; echo; echo) | gpg --command-fd 0 --pinentry-mode loopback --change-passphrase $(gpg --list-secret-keys --with-colons 2> /dev/null | grep '^sec:' | cut --delimiter ':' --fields 5 | tail -n 1)
 
-      - env:
-          PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
-          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-          GIT_DEPLOY_KEY: ${{ secrets.GIT_DEPLOY_KEY }}
-          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-          PGP_SECRET: ${{ secrets.PGP_SECRET }}
-        run: sbt '++${{ matrix.scala }}' ci-release docs/docusaurusPublishGhpages
+      - name: Publish
+        run: sbt '++${{ matrix.scala }}' tlRelease
 
   site:
     name: Generate Site
@@ -203,22 +161,6 @@ jobs:
           distribution: jdkfile
           java-version: 8
           jdkFile: ${{ steps.download-java-temurin-8.outputs.jdkFile }}
-
-      - name: Download Java (temurin@17)
-        id: download-java-temurin-17
-        if: matrix.java == 'temurin@17'
-        uses: typelevel/download-java@v1
-        with:
-          distribution: temurin
-          java-version: 17
-
-      - name: Setup Java (temurin@17)
-        if: matrix.java == 'temurin@17'
-        uses: actions/setup-java@v2
-        with:
-          distribution: jdkfile
-          java-version: 17
-          jdkFile: ${{ steps.download-java-temurin-17.outputs.jdkFile }}
 
       - name: Cache sbt
         uses: actions/cache@v2
