--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -12,4 +12,8 @@ updates.pin = [{
   groupId = "co.fs2",
   artifactId="fs2-core",
   version = "2."
+}, {
+  groupId="org.apache.kafka",
+  artifactId="kafka-clients",
+  version="2."
 }]
