--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -8,4 +8,9 @@ updates.pin = [{
   groupId = "co.fs2",
   artifactId="fs2-core",
   version = "2."
-}]
+}, {
+  groupId="org.apache.kafka",
+  artifactId="kafka-clients",
+  version="2."
+}
+]
