Ignore cats-effect/fs2 updates in series/3.x, pin kafka-client to 3

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -1,11 +1,21 @@
 pullRequests.frequency = "14 days"
 
-updates.pin = [{
+updates.ignore = [{
   groupId = "org.typelevel",
-  artifactId="cats-effect",
-  version = "2."
-}, {
+  artifactId="cats-effect"
+},{
+  groupId = "org.typelevel",
+  artifactId="cats-effect-laws"
+},{
+  groupId = "org.typelevel",
+  artifactId="cats-effect-testkit"
+},{
   groupId = "co.fs2",
-  artifactId="fs2-core",
-  version = "2."
+  artifactId="fs2-core"
+}]
+
+updates.pin = [{
+  groupId="org.apache.kafka",
+  artifactId="kafka-clients",
+  version="3."
 }]
