scala-steward (3.x series): ignore dependencies that should be merged forward from 2.x series

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -14,6 +14,24 @@ updates.ignore = [{
   artifactId="fs2-core"
 },{
   groupId = "com.dimafeng"
+},{
+  groupId = "org.scalameta",
+  artifactId = "sbt-scalafmt"
+},{
+  groupId = "de.heikoseeberger",
+  artifactId = "sbt-header"
+},{
+  groupId = "org.scala-lang",
+  artifactId = "scala-library"
+},{
+  groupId = "org.scala-lang",
+  artifactId = "scala3-library"
+},{
+  groupId = "ch.qos.logback",
+  artifactId = "logback-classic"
+},{
+  groupId = "org.typelevel",
+  artifactId = "discipline-scalatest"
 }]
 
 updates.pin = [{
