--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -16,4 +16,8 @@ updates.pin = [{
   groupId="org.apache.kafka",
   artifactId="kafka-clients",
   version="2."
+},{
+  groupId = "io.confluent",
+  artifactId = "kafka-avro-serializer",
+  version="6."
 }]
