--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -20,4 +20,8 @@ updates.pin = [{
   groupId = "io.confluent",
   artifactId = "kafka-avro-serializer",
   version="6."
-}]
+},{
+   groupId = "ch.qos.logback",
+   artifactId = "kafka-avro-serializer",
+   version="1.3."
+ }]
