3.x - pin some dependencies

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -32,7 +32,14 @@ updates.ignore = [{
 },{
   groupId = "org.typelevel",
   artifactId = "discipline-scalatest"
-}]
+},{
+  groupId = "ch.qos.logback",
+  artifactId = "logback-classic"
+},{
+  groupId = "com.github.fd4s",
+  artifactId = "vulcan"
+}
+]
 
 updates.pin = [{
   groupId="org.apache.kafka",
