--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        scala: [2.13.10, 3.2.2]
+        scala: [2.12.17, 2.13.10, 3.2.2]
         java: [temurin@8, temurin@17]
         exclude:
+          - scala: 2.12.17
+            java: temurin@17
           - scala: 3.2.2
             java: temurin@17
     runs-on: ${{ matrix.os }}
