Fix dependency pin

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -18,7 +18,7 @@ updates.pin = [{
   version="6."
 }, {
     groupId = "ch.qos.logback",
-    artifactId = "kafka-avro-serializer",
+    artifactId = ""logback-classic"",
     version="1.3."
   }
 ]
