Pin logback-classic to 1.3.x (1.4.x is built with JDK 11)

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -9,4 +9,8 @@ updates.pin = [{
   groupId="org.apache.kafka",
   artifactId="kafka-clients",
   version="3."
+},{
+  groupId="ch.qos.logback",
+  artifactId="logback-classic",
+  version="1.3"
 }]
