--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,7 +1,105 @@
-version = "2.2.2"
-style = default
-maxColumn = 100
-project.git = true
-continuationIndent.defnSite = 2
+version = "3.7.15"
 
-rewrite.rules = [RedundantBraces]
+# Scala 2 with -Xsource:3 compiler option
+runner.dialect = scala213source3
+
+# Number of maximum characters in a column
+maxColumn = 100
+
+# Indentation used historically in the project
+indent.defnSite = 2
+
+# Ensure breaks on each select (.method1.method2...) unless all fit on a single line
+newlines.selectChains = unfold
+
+# Ensure newlines are added around top level body definitions when there are more than one statement
+newlines.topLevelBodyIfMinStatements = [before,after]
+newlines.topLevelBodyMinStatements = 2
+
+# Allow line-overflow for comments and lines that would overflow even with a newline.
+newlines.avoidForSimpleOverflow=[slc, tooLong]
+
+# Ensure newlines around every statement except `case object` definitions
+newlines.topLevelStatementBlankLines = [
+  {
+    blanks = 1,
+    minBreaks = 1,
+    regex = "^(?!((Term\\.Apply)|(Defn\\.Object)))"
+  }
+]
+
+# Ensure lines starting with the margin character `|` are indented differently
+assumeStandardLibraryStripMargin = true
+
+# Align everything that can be aligned
+align.preset = most
+align.multiline = false
+align.tokens."+" = [
+  {
+    code = ":=", owner = "Term.ApplyInfix"
+  },
+  {
+    code = "+=", owner = "Term.ApplyInfix"
+  },
+  {
+    code = "++=", owner = "Term.ApplyInfix"
+  },
+  {
+    code = "--=", owner = "Term.ApplyInfix"
+  },
+  {
+    code = "-=", owner = "Term.ApplyInfix"
+  }
+]
+
+# Allow literal argument lists with newlines only once `maxColumn` is reached
+binPack.literalArgumentLists = true
+binPack.literalsIncludeSimpleExpr = true
+binPack.literalsExclude = [ "Term.Name" ]
+
+# Use ScalaDoc style and enable wrapping when reaching `maxColumn`
+docstrings.style = "SpaceAsterisk"
+docstrings.wrap = yes
+docstrings.blankFirstLine = yes
+docstrings.oneline = unfold
+
+rewrite.rules = [
+  AvoidInfix, # Avoid infix calls (except for operators)
+  RedundantBraces,
+  RedundantParens, # Ensure redundant parentheses are removed
+  SortModifiers, # Ensure modifiers like `implicit` or `final` are sorted the same
+  PreferCurlyFors, # Replaces parentheses into curly braces in for comprehensions that contain multiple enumerator generators
+  Imports
+]
+
+# Ensure redundant braces are removed
+rewrite.redundantBraces.maxLines = 1
+rewrite.redundantBraces.stringInterpolation = true
+
+# Ensure consistent ordering for imports
+rewrite.imports.sort = original
+rewrite.imports.groups = [
+  ["java\\..*"],
+  ["scala\\..*"],
+  ["cats\\..*", "fs2\\..*"]
+]
+
+# Avoid ASCII tokens
+rewriteTokens = {
+  "⇒": "=>"
+  "→": "->"
+  "←": "<-"
+}
+
+# Select followed by curly braces should not start a chain
+includeCurlyBraceInSelectChains = false
+
+# Ensure code blocks inside markdown files get formatted too
+project.includePaths = ["glob:**.scala", "glob:**.sbt", "glob:**.sc", "glob:**.md"]
+project.excludePaths = ["glob:**metals.sbt"]
+
+fileOverride {
+  "glob:**/scala-2.12/**/*.scala" {
+    runner.dialect = scala212source3
+  }
+}
