Restrict `docs/run` execution in CI to JDK LTS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
 
       - run: sbt '++ ${{ matrix.scala }}' ci
 
-      - if: matrix.scala == '2.13'
+      - if: matrix.scala == '2.13' && matrix.java == 'temurin@21'
         run: sbt '++ ${{ matrix.scala }}' docs/run
 
   publish:
